@@ -1,3 +1,8 @@
+2005-07-20  Heikki Junes <hjunes@cc.hut.fi>
+
+	* newweb.css: optimize for a 800x600 screen, increases printability 
+	when 'fit to page' is not set and readability in wide screens.
+
 2005-07-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/install/stable.ihtml: 2.6.1 for macos and autopackage.
